ultimas correcciones para entrega 2 de proyecto

--- a/PlataformaDisco/LogIn.html
+++ b/PlataformaDisco/LogIn.html
@@ -6,42 +6,51 @@
     <title>Imagine Dragons</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body class="sing_up">
     <div class="TitleRegis">
-      <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
+      <img
+        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        alt=""
+        class="imgTitle"
+      />
     </div>
     <div class="singUp">
       <form action="" method="post" class="form">
-        <p class="title">Inicia Sesion </p>
-        <label>Email
-            <input
+        <p class="title">Inicia Sesion</p>
+        <label
+          >Email
+          <input
             type="email"
             name="CorreoSing"
             placeholder="Email"
             maxlength="40"
-            required
             class="input"
           />
         </label>
-        <label>Password
-            <input
+        <label
+          >Password
+          <input
             type="password"
             name="Pass"
             placeholder="Password"
             maxlength="10"
-            required
             class="input"
           />
         </label>
-        <a href="index.html" class="button">
-          Inicia Sesión
-        </a>
-        <p class="signin">¿Todavia no te registraste? <a href="SingUp.html">Registrate aqui!</a> </p>
+        <button type="submit" class="submit">Inicia Sesión</button>
+        <p class="signin">
+          ¿Todavia no te registraste? <a href="SingUp.html">Registrate aqui!</a>
+        </p>
       </form>
     </div>
+    <script src="valueForm.js"></script>
   </body>
 </html>
