--- a/PlataformaDisco/Origins.html
+++ b/PlataformaDisco/Origins.html
@@ -6,147 +6,147 @@
     <title>Imagine Dragons</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-<body class="bodyEvolve">
-  <div class="TitleMain">
-    <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
-  </div>
-  <div class="sidebar">
-    <div class="user">
-      <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
-      <span class="username">Fedusca</span>
+  <body class="bodyEvolve">
+    <div class="TitleMain">
+      <img
+        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        alt=""
+        class="imgTitle"
+      />
     </div>
-    <div class="menu">
-      <div class="section">
-        <a href="index.html">
-          Volver al Inicio
-        </a>
+    <div class="sidebar">
+      <div class="user">
+        <img
+          src="iconoUser/imagine-dragons-lohan.jpg"
+          alt="User Icon"
+          class="userIco"
+        />
+        <span class="username">Fedusca</span>
       </div>
-      <div class="section">
-        <a href="addSong.html"> Agrega canciones </a>
-      </div>
-      <div class="section">
-        <a href="Addalbum.html">
-          agrega albunes
-        </a>
-      </div>
-      <div class="section">
-        <a href="editAlbum.html"> Editar album </a>
-      </div>
-      <div class="section">
-        <a href="index.html">
-          Más Albunes
-        </a>
-      </div>
-      <div class="section">
-        <a href="LogIn.html">
-          Iniciar Sesion
-        </a>
-      </div>
-      <div class="section">
-        <a href="LogIn.html">
-          Log out
-        </a>
+      <div class="menu">
+        <div class="section">
+          <a href="index.html"> Volver al Inicio </a>
+        </div>
+        <div class="section">
+          <a href="addSong.html"> Agrega canciones </a>
+        </div>
+        <div class="section">
+          <a href="Addalbum.html"> agrega albunes </a>
+        </div>
+        <div class="section">
+          <a href="editAlbum.html"> Editar album </a>
+        </div>
+        <div class="section">
+          <a href="index.html"> Más Albunes </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Iniciar Sesion </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Log out </a>
+        </div>
       </div>
     </div>
-  </div>
     <div class="Evolve">
-        <h2>Album Origins</h2>
-        <img src="Origins/Origins_cover.jpg" alt="AlbumOrigin" class="imgEvolve"/>
-        <p class="pEvolve">
-            «Origins» (en español: «Orígenes») es el cuarto álbum de estudio de la banda de pop rock estadounidense Imagine Dragons, lanzado el 9 de noviembre de 2018 a través de KIDinaKORNER e Interscope Records. Fue producido por los miembros de la banda, su colaborador frecuente Alex da Kid, Mattman & Robin, John Hill, Joel Little, Tim Randolph y Jayson DeZuzio, quienes produjeron la mayoría del esfuerzo previo de la banda, «Evolve» (2017), así como también del productor Jorgen Odegard. El álbum fue precedido por cuatro singles: «Natural», «Zero», «Machine» y «Bad Liar».
-        </p>
-        </div>
-        <div class="titlesong">
-        <h2>Canciones:</h2>
-        </div>
-        <div class="songList">
-        <ol>
-          <li>
-            Natural
-            <audio class="song"
-              controls
-              src="Origins/Imagine Dragons - Natural.mp3"
-            ></audio>
-          </li>
-          <li>
-            Boomerang
-            <audio class="song"
-              controls
-              src="Origins/Boomerang.mp3"
-            ></audio>
-          </li>
-          <li>
-            Machine
-            <audio class="song"
-              controls
-              src="Origins/Imagine Dragons - Machine (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Cool Out
-            <audio class="song"
-              controls
-              src="Origins/Cool Out.mp3"
-            ></audio>
-          </li>
-          <li>
-            Bad Liar
-            <audio class="song" controls src="Origins/Imagine Dragons - Bad Liar.mp3"></audio>
-          </li>
-          <li>
-            West Coast
-            <audio class="song"
-              controls
-              src="Origins/West Coast.mp3"
-            ></audio>
-          </li>
-          <li>
-            Zero
-            <audio class="song"
-              controls
-              src="Origins/Imagine Dragons - Zero (From the Original Motion Picture _Ralph Breaks The Internet_).mp3"
-            ></audio>
-          </li>
-          <li>
-            Bullet In A Gun
-            <audio class="song"
-              controls
-              src="Origins/Bullet In A Gun.mp3"
-            ></audio>
-          </li>
-          <li>
-            Digital
-            <audio class="song"
-              controls
-              src="Origins/Digital.mp3"
-            ></audio>
-          </li>
-          <li>
-            Only
-            <audio class="song"
-              controls
-              src="Origins/Only.mp3"
-            ></audio>
-          </li>
-          <li>
-            Stuck
-            <audio class="song"
-              controls
-              src="Origins/Stuck.mp3"
-            ></audio>
-          </li>
-          <li>
-            Love
-            <audio class="song"
-              controls
-              src="Origins/Love.mp3"
-            ></audio>
-          </li>
-        </ol>
-      </div>
-</body>
+      <h2>Album Origins</h2>
+      <img
+        src="Origins/Origins_cover.jpg"
+        alt="AlbumOrigin"
+        class="imgEvolve"
+      />
+      <p class="pEvolve">
+        «Origins» (en español: «Orígenes») es el cuarto álbum de estudio de la
+        banda de pop rock estadounidense Imagine Dragons, lanzado el 9 de
+        noviembre de 2018 a través de KIDinaKORNER e Interscope Records. Fue
+        producido por los miembros de la banda, su colaborador frecuente Alex da
+        Kid, Mattman & Robin, John Hill, Joel Little, Tim Randolph y Jayson
+        DeZuzio, quienes produjeron la mayoría del esfuerzo previo de la banda,
+        «Evolve» (2017), así como también del productor Jorgen Odegard. El álbum
+        fue precedido por cuatro singles: «Natural», «Zero», «Machine» y «Bad
+        Liar».
+      </p>
+    </div>
+    <div class="titlesong">
+      <h2>Canciones:</h2>
+    </div>
+    <div class="songList">
+      <ol>
+        <li>
+          Natural
+          <audio
+            class="song"
+            controls
+            src="Origins/Imagine Dragons - Natural.mp3"
+          ></audio>
+        </li>
+        <li>
+          Boomerang
+          <audio class="song" controls src="Origins/Boomerang.mp3"></audio>
+        </li>
+        <li>
+          Machine
+          <audio
+            class="song"
+            controls
+            src="Origins/Imagine Dragons - Machine (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Cool Out
+          <audio class="song" controls src="Origins/Cool Out.mp3"></audio>
+        </li>
+        <li>
+          Bad Liar
+          <audio
+            class="song"
+            controls
+            src="Origins/Imagine Dragons - Bad Liar.mp3"
+          ></audio>
+        </li>
+        <li>
+          West Coast
+          <audio class="song" controls src="Origins/West Coast.mp3"></audio>
+        </li>
+        <li>
+          Zero
+          <audio
+            class="song"
+            controls
+            src="Origins/Imagine Dragons - Zero (From the Original Motion Picture _Ralph Breaks The Internet_).mp3"
+          ></audio>
+        </li>
+        <li>
+          Bullet In A Gun
+          <audio
+            class="song"
+            controls
+            src="Origins/Bullet In A Gun.mp3"
+          ></audio>
+        </li>
+        <li>
+          Digital
+          <audio class="song" controls src="Origins/Digital.mp3"></audio>
+        </li>
+        <li>
+          Only
+          <audio class="song" controls src="Origins/Only.mp3"></audio>
+        </li>
+        <li>
+          Stuck
+          <audio class="song" controls src="Origins/Stuck.mp3"></audio>
+        </li>
+        <li>
+          Love
+          <audio class="song" controls src="Origins/Love.mp3"></audio>
+        </li>
+      </ol>
+    </div>
+  </body>
 </html>
