--- a/PlataformaDisco/SingUp.html
+++ b/PlataformaDisco/SingUp.html
@@ -8,63 +8,71 @@
       <title>Imagine Dragons</title>
       <link rel="stylesheet" href="style.css" />
       <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet"
+      />
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </head>
     <body class="sing_up">
       <div class="TitleRegis">
-        <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
+        <img
+          src="TitleLogSing/Imagine-Dragons-Logo.png"
+          alt=""
+          class="imgTitle"
+        />
       </div>
       <div class="singUp">
         <form action="" method="post" class="form">
-          <p class="title">Registrate </p>
-          <p class="message">Registrate y obtene acceso total a la pagina! </p>
-            <label>Nombre
-                <input
-                type="text"
-                name="Nombre"
-                placeholder="Nombre"
-                maxlength="40"
-                required
-                class="input"
-              />
-            </label>
-            <label>Apellido
-                <input
-                type="text"
-                name="Apellido"
-                placeholder="Apellido"
-                maxlength="20"
-                required
-                class="input"
-              />
-            </label>
-            <label>Correo electronico
-                <input
-                type="email"
-                name="Correo"
-                placeholder="Email"
-                maxlength="50"
-                required
-                class="input"
-              />
-            </label>
-            <label>Password 
-                <input
-                type="password"
-                name="Pass"
-                placeholder="Password"
-                maxlength="10"
-                required
-                class="input"
-              />
-            </label>
-            <a href="index.html" class="button">Registrarse</a>
-
+          <p class="title">Registrate</p>
+          <p class="message">Registrate y obtene acceso total a la pagina!</p>
+          <label
+            >Nombre
+            <input
+              type="text"
+              name="Nombre"
+              placeholder="Nombre"
+              maxlength="40"
+              class="input"
+            />
+          </label>
+          <label
+            >Apellido
+            <input
+              type="text"
+              name="Apellido"
+              placeholder="Apellido"
+              maxlength="20"
+              class="input"
+            />
+          </label>
+          <label
+            >Correo electronico
+            <input
+              type="email"
+              name="Correo"
+              placeholder="Email"
+              maxlength="50"
+              class="input"
+            />
+          </label>
+          <label
+            >Password
+            <input
+              type="password"
+              name="Pass"
+              placeholder="Password"
+              maxlength="10"
+              class="input"
+            />
+          </label>
+          <button type="submit" class="submit">Registrarse</button>
+          <button type="submit" class="submit" id="cancelar">Cancelar</button>
         </form>
       </div>
+      <script src="valueForm.js"></script>
     </body>
   </html>
-  l
-</html>
+
