--- a/PlataformaDisco/Tours.html
+++ b/PlataformaDisco/Tours.html
@@ -8,14 +8,20 @@
     <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://kit.fontawesome.com/d6b943133b.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d6b943133b.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body class="bgTour">
     <div class="titleTour">
-       <img src="TitleLogSing/images.jpeg" alt="" class="imgTitle" />
+      <img src="TitleLogSing/images.jpeg" alt="" class="imgTitle" />
     </div>
     <div class="iSpan">
       <i></i>
