--- a/PlataformaDisco/nigthVision.html
+++ b/PlataformaDisco/nigthVision.html
@@ -56,7 +56,11 @@
     </div>
     <div class="Evolve">
       <h2>Album Nigth vision</h2>
-      <img src="nigthVision/zuyerphzzf04b_600.jpg" alt="AlbumEvolve" class="imgEvolve" />
+      <img
+        src="nigthVision/zuyerphzzf04b_600.jpg"
+        alt="AlbumEvolve"
+        class="imgEvolve"
+      />
       <p class="pEvolve">
         «Night Visions» (en español: «Visiones Nocturnas») es el álbum debut de
         la banda estadounidense de indie rock Imagine Dragons. Fue lanzado el 4
@@ -91,74 +95,88 @@
       <ol>
         <li>
           Radioactive
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Radioactive.mp3"
           ></audio>
         </li>
         <li>
           Tiptoe
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Tiptoe (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           I'ts Time
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - It's Time (Official Music Video).mp3"
           ></audio>
         </li>
         <li>
           Demons
-          <audio class="song"
+          <audio
+            class="song"
             controls=""
             src="nigthVision/Imagine Dragons - Demons (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           On top of the world
-          <audio class="song" controls src="nigthVision/Imagine Dragons - On Top Of The World (Official Music Video).mp3"></audio>
+          <audio
+            class="song"
+            controls
+            src="nigthVision/Imagine Dragons - On Top Of The World (Official Music Video).mp3"
+          ></audio>
         </li>
         <li>
           Amsterdam
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Amsterdam (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           Hear me
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Hear Me (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           Every nigth
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Every Night (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           Bleeding Out
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Bleeding Out (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           Underdog
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Underdog (Lyric Video).mp3"
           ></audio>
         </li>
         <li>
           Nothing left to say
-          <audio class="song"
+          <audio
+            class="song"
             controls
             src="nigthVision/Imagine Dragons - Nothing Left To Say (Art Film).mp3"
           ></audio>
