--- a/PlataformaDisco/smokeMirrors.html
+++ b/PlataformaDisco/smokeMirrors.html
@@ -56,7 +56,11 @@
     </div>
     <div class="Evolve">
       <h2>Album Smoke + Mirrors</h2>
-      <img src="smokeMirrors/0060254762377_600.jpg" alt="AlbumEvolve" class="imgEvolve" />
+      <img
+        src="smokeMirrors/0060254762377_600.jpg"
+        alt="AlbumEvolve"
+        class="imgEvolve"
+      />
       <p class="pEvolve">
         «Smoke + Mirrors» (en español: «Humo + Espejos») es el segundo álbum de
         estudio de la banda estadounidense de rock Imagine Dragons, lanzado el
@@ -82,93 +86,85 @@
     <div class="songList">
       <ol>
         <li>
-            Shots
-          <audio class="song"
+          Shots
+          <audio
+            class="song"
             controls
             src="smokeMirrors/Imagine Dragons - Shots.mp3"
           ></audio>
         </li>
         <li>
-            Gold
-          <audio class="song"
+          Gold
+          <audio
+            class="song"
             controls
             src="smokeMirrors/Imagine Dragons - Gold (Official Music Video).mp3"
           ></audio>
         </li>
         <li>
-            Smoke And Mirrors
-          <audio class="song"
+          Smoke And Mirrors
+          <audio
+            class="song"
             controls
             src="smokeMirrors/Smoke And Mirrors.mp3"
           ></audio>
         </li>
         <li>
-            I'm So Sorry
-          <audio class="song"
+          I'm So Sorry
+          <audio
+            class="song"
             controls=""
             src="smokeMirrors/I’m So Sorry.mp3"
           ></audio>
         </li>
         <li>
-            I Bet My Life
-          <audio class="song" controls src="smokeMirrors/Imagine Dragons - I Bet My Life.mp3"></audio>
+          I Bet My Life
+          <audio
+            class="song"
+            controls
+            src="smokeMirrors/Imagine Dragons - I Bet My Life.mp3"
+          ></audio>
         </li>
         <li>
-            Polaroid
-          <audio class="song"
-            controls
-            src="smokeMirrors/Polaroid.mp3"
-          ></audio>
+          Polaroid
+          <audio class="song" controls src="smokeMirrors/Polaroid.mp3"></audio>
         </li>
         <li>
           Friction
-          <audio class="song"
-            controls
-            src="smokeMirrors/Friction.mp3"
-          ></audio>
+          <audio class="song" controls src="smokeMirrors/Friction.mp3"></audio>
         </li>
         <li>
-            It Comes Back To You
-          <audio class="song"
+          It Comes Back To You
+          <audio
+            class="song"
             controls
             src="smokeMirrors/It Comes Back To You - Imagine Dragons (Audio).mp3"
           ></audio>
         </li>
         <li>
-            Dream
-          <audio class="song"
+          Dream
+          <audio class="song" controls src="smokeMirrors/Dream.mp3"></audio>
+        </li>
+        <li>
+          Trouble
+          <audio class="song" controls src="smokeMirrors/Trouble.mp3"></audio>
+        </li>
+        <li>
+          Summer
+          <audio class="song" controls src="smokeMirrors/Summer.mp3"></audio>
+        </li>
+        <li>
+          Hopeless Opus
+          <audio
+            class="song"
             controls
-            src="smokeMirrors/Dream.mp3"
+            src="smokeMirrors/Hopeless Opus.mp3"
           ></audio>
         </li>
         <li>
-            Trouble
-          <audio class="song"
-            controls
-            src="smokeMirrors/Trouble.mp3"
-          ></audio>
+          The Fall
+          <audio class="song" controls src="smokeMirrors/The Fall.mp3"></audio>
         </li>
-        <li>
-            Summer
-          <audio class="song"
-            controls
-            src="smokeMirrors/Summer.mp3"
-          ></audio>
-        </li>
-        <li>
-            Hopeless Opus
-            <audio class="song"
-              controls
-              src="smokeMirrors/Hopeless Opus.mp3"
-            ></audio>
-          </li>
-          <li>
-            The Fall
-            <audio class="song"
-              controls
-              src="smokeMirrors/The Fall.mp3"
-            ></audio>
-          </li>
       </ol>
     </div>
   </body>
