--- a/PlataformaDisco/Evolve.html
+++ b/PlataformaDisco/Evolve.html
@@ -6,158 +6,173 @@
     <title>Imagine Dragons</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-<body class="bodyEvolve">
-  <div class="TitleMain">
-    <img src="TitleLogSing/Imagine-Dragons-Logo.png" alt="" class="imgTitle">
-  </div>
-  <div class="sidebar">
-    <div class="user">
-      <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
-      <span class="username">Fedusca</span>
+  <body class="bodyEvolve">
+    <div class="TitleMain">
+      <img
+        src="TitleLogSing/Imagine-Dragons-Logo.png"
+        alt=""
+        class="imgTitle"
+      />
     </div>
-    <div class="menu">
-      <div class="section">
-        <a href="index.html">
-          Volver al Inicio
-        </a>
+    <div class="sidebar">
+      <div class="user">
+        <img
+          src="iconoUser/imagine-dragons-lohan.jpg"
+          alt="User Icon"
+          class="userIco"
+        />
+        <span class="username">Fedusca</span>
       </div>
-      <div class="section">
-        <a href="addSong.html"> Agrega canciones </a>
-      </div>
-      <div class="section">
-        <a href="Addalbum.html">
-          agrega albunes
-        </a>
-      </div>
-      <div class="section">
-        <a href="editAlbum.html"> Editar album </a>
-      </div>
-      <div class="section">
-        <a href="index.html">
-          Más Albunes
-        </a>
-      </div>
-      <div class="section">
-        <a href="LogIn.html">
-          Iniciar Sesion
-        </a>
-      </div>
-      <div class="section">
-        <a href="LogIn.html">
-          Log out
-        </a>
+      <div class="menu">
+        <div class="section">
+          <a href="index.html"> Volver al Inicio </a>
+        </div>
+        <div class="section">
+          <a href="addSong.html"> Agrega canciones </a>
+        </div>
+        <div class="section">
+          <a href="Addalbum.html"> agrega albunes </a>
+        </div>
+        <div class="section">
+          <a href="editAlbum.html"> Editar album </a>
+        </div>
+        <div class="section">
+          <a href="index.html"> Más Albunes </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Iniciar Sesion </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Log out </a>
+        </div>
       </div>
     </div>
-  </div>
     <div class="Evolve">
-        <h2>Album Origin</h2>
-        <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" class="imgEvolve"/>
-        <p class="pEvolve">
-          Evolve (estilizado como ƎVOLVE ) es el tercer álbum de estudio de la
-          bandaestadounidense de pop rock Imagine Dragons , lanzado el 23 de junio
-          de 2017 por Kidinakorner e Interscope Records . Luego del lanzamiento de
-          su anterior álbum Smoke + Mirrors (2015) y su respectiva gira mundial,
-          una pausa autoimpuesta para 2016 y mensajes crípticos de la banda a
-          través de sus redes sociales ganaron anticipación por su tercer álbum;
-          finalmente se anunció el 9 de mayo de 2017, junto con el inicio de su
-          pedido anticipado. En comparación con Smoke + Mirrors y su debut Night
-          Visions de 2012 , el líder Dan Reynolds calificó el álbum como una
-          "evolución" para la banda. <br />
-          Evolve alcanzó el puesto número 2 en el Billboard 200 de EE. UU . y
-          recibió críticas mixtas de los críticos; algunos reconocieron la
-          afirmación de evolución de la banda, mientras que otros la describieron
-          como sin vida y con orientación comercial. Fue promocionado con los
-          sencillos " Believe ", " Thunder ", " Whatever It Takes " y " Next to Me
-          ", así como una gira mundial producida por Live Nation y apoyada por
-          Grouplove y K.Flay que comenzó en septiembre de 2017. El álbum también
-          fue nominado al premio Grammy al Mejor Álbum Vocal Pop en la 60ª Entrega
-          Anual de los Premios Grammy . [1]
-        </p>
-        </div>
-        <div class="titlesong">
-        <h2>Canciones:</h2>
-        </div>
-        <div class="songList">
-        <ol>
-          <li>
-            I Don't Know Why
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons  I Dont Know Why.mp3"
-            ></audio>
-          </li>
-          <li>
-            Whatever it takes
-            <audio  class="song"
-              controls
-              src="Evolve/Imagine Dragons - Whatever It Takes (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Believer
-            <audio  class="song"
-              controls
-              src="Evolve/Imagine Dragons - Believer (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Walking the wire
-            <audio  class="song"
-              controls=""
-              src="Evolve/Imagine Dragons - Walking The Wire Copy (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Rise up
-            <audio class="song" controls src="Evolve/Imagine Dragons - Rise Up.mp3"></audio>
-          </li>
-          <li>
-            I'll make it up to you
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3"
-            ></audio>
-          </li>
-          <li>
-            Yesterday
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons Yesterday (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Mouth of the river
-            <audio class="song"
-              controls
-              src="Evolve/Mouth Of The River - Imagine Dragons (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Thunder
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons - Thunder (Audio).mp3"
-            ></audio>
-          </li>
-          <li>
-            Start Over
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons  Start Over [Exclusive].mp3"
-            ></audio>
-          </li>
-          <li>
-            Dancing in the dark
-            <audio class="song"
-              controls
-              src="Evolve/Imagine Dragons - Dancing in the Dark.mp3"
-            ></audio>
-          </li>
-        </ol>
-      </div>
-</body>
+      <h2>Album Origin</h2>
+      <img src="Evolve/EVOLVE COVER.jpg" alt="AlbumEvolve" class="imgEvolve" />
+      <p class="pEvolve">
+        Evolve (estilizado como ƎVOLVE ) es el tercer álbum de estudio de la
+        bandaestadounidense de pop rock Imagine Dragons , lanzado el 23 de junio
+        de 2017 por Kidinakorner e Interscope Records . Luego del lanzamiento de
+        su anterior álbum Smoke + Mirrors (2015) y su respectiva gira mundial,
+        una pausa autoimpuesta para 2016 y mensajes crípticos de la banda a
+        través de sus redes sociales ganaron anticipación por su tercer álbum;
+        finalmente se anunció el 9 de mayo de 2017, junto con el inicio de su
+        pedido anticipado. En comparación con Smoke + Mirrors y su debut Night
+        Visions de 2012 , el líder Dan Reynolds calificó el álbum como una
+        "evolución" para la banda. <br />
+        Evolve alcanzó el puesto número 2 en el Billboard 200 de EE. UU . y
+        recibió críticas mixtas de los críticos; algunos reconocieron la
+        afirmación de evolución de la banda, mientras que otros la describieron
+        como sin vida y con orientación comercial. Fue promocionado con los
+        sencillos " Believe ", " Thunder ", " Whatever It Takes " y " Next to Me
+        ", así como una gira mundial producida por Live Nation y apoyada por
+        Grouplove y K.Flay que comenzó en septiembre de 2017. El álbum también
+        fue nominado al premio Grammy al Mejor Álbum Vocal Pop en la 60ª Entrega
+        Anual de los Premios Grammy . [1]
+      </p>
+    </div>
+    <div class="titlesong">
+      <h2>Canciones:</h2>
+    </div>
+    <div class="songList">
+      <ol>
+        <li>
+          I Don't Know Why
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons  I Dont Know Why.mp3"
+          ></audio>
+        </li>
+        <li>
+          Whatever it takes
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons - Whatever It Takes (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Believer
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons - Believer (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Walking the wire
+          <audio
+            class="song"
+            controls=""
+            src="Evolve/Imagine Dragons - Walking The Wire Copy (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Rise up
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons - Rise Up.mp3"
+          ></audio>
+        </li>
+        <li>
+          I'll make it up to you
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons  Ill Make It Up To You [Exclusive].mp3"
+          ></audio>
+        </li>
+        <li>
+          Yesterday
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons Yesterday (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Mouth of the river
+          <audio
+            class="song"
+            controls
+            src="Evolve/Mouth Of The River - Imagine Dragons (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Thunder
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons - Thunder (Audio).mp3"
+          ></audio>
+        </li>
+        <li>
+          Start Over
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons  Start Over [Exclusive].mp3"
+          ></audio>
+        </li>
+        <li>
+          Dancing in the dark
+          <audio
+            class="song"
+            controls
+            src="Evolve/Imagine Dragons - Dancing in the Dark.mp3"
+          ></audio>
+        </li>
+      </ol>
+    </div>
+  </body>
 </html>
