--- a/PlataformaDisco/addSong.html
+++ b/PlataformaDisco/addSong.html
@@ -1,69 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Imagine Dragons</title>
-        <link rel="stylesheet" href="style.css" />
-        <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-      </head>
-<body class="sing_up">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Imagine Dragons</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="f104f846351d61cee8ef66f9d7fc5f09.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  </head>
+  <body class="sing_up">
     <div class="sidebar">
-        <div class="user">
-          <img src="iconoUser/imagine-dragons-lohan.jpg" alt="User Icon" class="userIco">
-          <span class="username">Fedusca</span>
+      <div class="user">
+        <img
+          src="iconoUser/imagine-dragons-lohan.jpg"
+          alt="User Icon"
+          class="userIco"
+        />
+        <span class="username">Fedusca</span>
+      </div>
+      <div class="menu">
+        <div class="section">
+          <a href="index.html"> Volver al Inicio </a>
         </div>
-        <div class="menu">
-          <div class="section">
-            <a href="index.html">
-              Volver al Inicio
-            </a>
-          </div>
-          <div class="section">
-            <a href="index.html">
-              Más Albunes
-            </a>
-          </div>
-          <div class="section">
-            <a href="Addalbum.html"> Agrega albunes </a>
-          </div>
-          <div class="section">
-            <a href="editAlbum.html"> Editar album </a>
-          </div>
-          <div class="section">
-            <a href="LogIn.html">
-              Iniciar Sesion
-            </a>
-          </div>
-          <div class="section">
-            <a href="LogIn.html">
-              Log out
-            </a>
-          </div>
+        <div class="section">
+          <a href="index.html"> Más Albunes </a>
+        </div>
+        <div class="section">
+          <a href="Addalbum.html"> Agrega albunes </a>
+        </div>
+        <div class="section">
+          <a href="editAlbum.html"> Editar album </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Iniciar Sesion </a>
+        </div>
+        <div class="section">
+          <a href="LogIn.html"> Log out </a>
         </div>
       </div>
-    <div class="singUp"> 
-        <form action="" method="post" class="form">
-            <p class="title">Agrega una cancion! </p>
-            <label>Titulo
-                <input type="text" placeholder="Titulo" required  class="input">
-            </label>
-            <label>Fecha de lanzamiento
-                <input type="date" name="Año"  class="input">
-            </label>
-            <label>Descripcion
-                <textarea name="Descripcion" cols="30" rows="10" placeholder="Descripcion" maxlength="120"  class="input"></textarea>
-            </label>
-            <label>Imagen de album
-                <input type="url" name="Image" placeholder="URL de imagen" class="input">
-            </label>
-            <a href="index.html" class="button">
-              Agregar canción
-            </a>
-        </form>
-    </div>        
-</body>
+    </div>
+    <div class="singUp">
+      <form action="" method="post" class="form">
+        <p class="title">Agrega una cancion!</p>
+        <label
+          >Titulo
+          <input type="text" placeholder="Titulo" class="input" />
+        </label>
+        <label
+          >Fecha de lanzamiento
+          <input type="date" name="Año" class="input" />
+        </label>
+        <label
+          >Descripcion
+          <textarea
+            name="Descripcion"
+            cols="30"
+            rows="10"
+            placeholder="Descripcion"
+            maxlength="120"
+            class="input"
+          ></textarea>
+        </label>
+        <label
+          >Imagen de album
+          <input
+            type="url"
+            name="Image"
+            placeholder="URL de imagen"
+            class="input"
+          />
+        </label>
+        <button type="submit" class="submit">Agregar cancion</button>
+        <button type="submit" class="submit" id="cancelar">Cancelar</button>
+      </form>
+    </div>
+    <script src="valueForm.js"></script>
+  </body>
 </html>
